# syntheyes2

./: .gitignore  BitmapType.hpp  ColourWheel.cpp  ColourWheel.hpp  LICENSE  MicDriver.cpp  MicDriver.hpp  NeopixelDriver.cpp  NeopixelDriver.hpp  PanelDriver.cpp  PanelDriver.hpp  PosixTiming.cpp  PosixTiming.hpp  README.md  Timing.hpp  config.cpp  config.hpp  font.cpp  font.hpp  images-arthi.h  images-arthi2.h  images-xerian.h  inttype.h  syntheyes.cpp  syntheyes.hpp
linux/: Makefile  Unicorn.cpp  eyeconfig.h  eyeconfig.txt  main.cpp
pi/: Makefile  Unicorn.cpp  Unicorn.hpp  eyeconfig.h  eyeconfig.txt  main.cpp
pico/: CMakeLists.txt  Hub08.cpp  Hub08.hpp  PicoMic.cpp  PicoMic.hpp  PicoTiming.hpp  WS2812.cpp  WS2812.hpp  eyeconfig.h  main.cpp  mkbuild.sh  pinout.txt
